@startuml Image_Storage_Adapter_Design_Architecture

!pragma layout smetana

' Professional Styling (Member 3 style)
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #4A90D9
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classBackgroundColor #F0F7FF
skinparam stereotypeCBackgroundColor #E8F4FD
skinparam ArrowColor #2C5F8A

title Multi-Platform Image Storage Architecture (Adapter + Strategy)

' =============================================
' 1. TARGET INTERFACE
' =============================================
package "Abstraction (Target)" {
    interface ImageStorageService <<interface>> {
        + uploadImage(MultipartFile file) : String
        + deleteImage(String imageIdentifier) : boolean
        + getProviderName() : String
    }
}

' =============================================
' 2. ADAPTERS (Adaptees to Target)
' =============================================
package "Storage Adapters (Strategies)" {
    class CloudinaryStorageAdapter {
        - cloudinarySDK : Cloudinary
        + uploadImage(MultipartFile file) : String
        + deleteImage(String imageIdentifier) : boolean
    }

    class LocalStorageAdapter {
        - uploadDir : String
        - urlPrefix : String
        + uploadImage(MultipartFile file) : String
        + deleteImage(String imageIdentifier) : boolean
    }

    class S3StorageAdapter {
        - s3Client : AmazonS3
        + uploadImage(MultipartFile file) : String
        + deleteImage(String imageIdentifier) : boolean
    }
}

' =============================================
' 3. CLIENTS
' =============================================
package "Service Consumers (DIP)" {
    class AdminProductController {
        - storageService : ImageStorageService
        + saveProduct(...) : void
    }

    class AccountService {
        - storageService : ImageStorageService
        + updateAvatar(...) : void
    }
}

' =============================================
' RELATIONSHIPS
' =============================================

' Interface Implementations (Adapter Pattern)
ImageStorageService <|-- CloudinaryStorageAdapter
ImageStorageService <|-- LocalStorageAdapter
ImageStorageService <|-- S3StorageAdapter

' Dependency Injection (DIP)
AdminProductController o-- ImageStorageService : depends on abstraction >
AccountService o-- ImageStorageService : depends on abstraction >

note bottom of ImageStorageService
  Adapter Pattern (triển khai qua Strategy) cho phép hệ thống 
  hỗ trợ nhiều nền tảng lưu trữ (Cloudinary, Local, S3) 
  mà không cần thay đổi logic nghiệp vụ hiện có.
  Tuân thủ nguyên tắc DIP bằng cách để các Controller phụ thuộc 
  vào trừu tượng (Interface) thay vì các bộ SDK cụ thể.
end note

@enduml
